<resources>
    <string name="app_name">Khettaf</string>
    <string name="authentication_prefs">authentication</string>
    <string name="last_username">lastUsername</string>
    <string name="last_password">lastPassword</string>
    <string name="access_token">accessToken</string>
    <string name="refresh_token">refreshToken</string>
    <string name="token_expires_at">expiresAt</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="login">Connexion</string>
    <string name="forgotPassword">Mot de passe oublié ?</string>
    <string name="createAccount">Créer votre compte</string>
    <string name="KhettafMotto">Covoiturage Made Easy.</string>
    <string name="loggingIn">Connexion en cours&#8230;</string>
    <string name="networkUnavailable">Accès internet indisponible</string>
    <string name="loginFailed">Echéc de la connexion</string>
    <string name="from">De</string>
    <string name="to">vers</string>
    <string name="timePronoun">à</string>
    <string name="unavailableText">Texte non disponible</string>
    <string name="start">Départ</string>
    <string name="reconnected">Reconnecté</string>
</resources>
