<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbarSize="2dp"
    android:scrollbarThumbVertical="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:src="@drawable/logo_512" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            style="@style/motto"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/primaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/loginUsername" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/primaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/loginPassword" />

        <Button
            android:id="@+id/loginButton"
            style="@style/primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/linkTextView"
                android:text="@string/forgotPassword"
                android:layout_margin="8dp"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/linkTextView"
                android:text="@string/createAccount"
                android:layout_margin="8dp"
                android:padding="8dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
