<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/windowsBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titreTextView"
            style="@style/mainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/unavailableText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/from"
                android:textColor="@color/colorTransparentBlack" />

            <TextView
                android:id="@+id/departTextView"
                style="importantBlackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailableText"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/to"
                android:textColor="@color/colorTransparentBlack"/>

            <TextView
                android:id="@+id/destinationTextView"
                style="importantBlackTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unavailableText"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_marginEnd="5dp"
                android:textColor="@color/colorTransparentBlack" />

            <TextView
                android:id="@+id/dateTextView"
                style="importantBlackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailableText"
                android:textColor="@android:color/black" />

        </LinearLayout>


        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:minLines="1"
            android:text="@string/unavailableText"
            android:textColor="@color/colorTransparentBlack" />


    </LinearLayout>
</android.support.v7.widget.CardView>